# ubh-fall2023-puzzles

./: .gitmodules  CMakeLists.txt
desktop/: CMakeLists.txt
desktop/src/: main.cpp
ios/: CMakeLists.txt  Info.plist.in
ios/include/: UBHackingFall2023-Bridging-Header.h  solver_bridge.h
ios/src/: content_view.swift  puzzles_app.swift  solver_bridge.mm  viewfinder_view.swift
solver/: CMakeLists.txt
solver/include/solver/: board_detection.h  solver.h  sudokuSolver.h  sudoku_grid.h  sudoku_solver.h  textRecognition.h  text_recognition.h
solver/src/: board_detection.cpp  solver.cpp  sudokuSolver.cpp  sudoku_grid.cpp  sudoku_solver.cpp  textRecognition.cpp  textRecognition.py  text_recognition.cpp
